fixed footer jumpnig @input:focus

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,9 @@ body {
 
 
 footer {
-    margin: 50px;
+    margin-bottom: 20px;
+    text-align: center;
+    z-index: -1;
 }
 
 
